实现部分代码
